# experimentation-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
Agents/Experimentation/: .env.example  README.md  pyproject.toml
Agents/Experimentation/scripts/: generate_synthetic_data.py  setup_db.py
Agents/Experimentation/src/ab_testing_agent/agents/: base.py  hypothesis.py
Agents/Experimentation/src/ab_testing_agent/config/prompts/: hypothesis.yaml
Agents/Experimentation/src/ab_testing_agent/data/: models.py  repositories.py  schemas.py
Agents/Experimentation/src/ab_testing_agent/interface/: cli.py
Agents/Experimentation/src/ab_testing_agent/synthetic/: scenarios.py
Agents/Experimentation/src/ab_testing_agent/tools/statistical/: confidence_intervals.py  hypothesis_testing.py  metrics.py  power_analysis.py
Agents/Experimentation/src/ab_testing_agent/utils/: exceptions.py
Agents/Experimentation/tests/unit/test_agents/: test_hypothesis.py
Agents/Experimentation/tests/unit/test_tools/: test_confidence_intervals.py  test_effect_sizes.py
scripts/: generate_synthetic_data.py  setup_db.py
src/ab_testing_agent/: __main__.py
src/ab_testing_agent/agents/: analysis.py  decision.py  design.py
src/ab_testing_agent/api/: __init__.py  app.py  dependencies.py  schemas.py
src/ab_testing_agent/config/: settings.py
src/ab_testing_agent/config/prompts/: design.yaml
src/ab_testing_agent/data/: __init__.py  schemas.py
src/ab_testing_agent/tools/statistical/: __init__.py
src/ab_testing_agent/utils/: logging.py
src/testing_agent/agents/: __init__.py
src/testing_agent/api/routes/: analysis.py  decision.py  design.py  health.py  hypothesis.py
src/testing_agent/config/: settings.py
src/testing_agent/synthetic/: generators.py
tests/: conftest.py
tests/unit/test_agents/: test_hypothesis.py
tests/unit/test_tools/: test_confidence_intervals.py  test_effect_sizes.py  test_metrics.py
workflows/n8n_examples/: README.md  ab_test_workflow.json
(+3 files in other folders)
